--- a/src/templates/index.html.twig
+++ b/src/templates/index.html.twig
@@ -28,24 +28,22 @@
         </div>
         <div>
             {{ include('upload.html.twig') }}
+            {{ include('error.html.twig') }}
         </div>
         <table class="table table-striped table-hover">
             <thead>
             <tr>
                 <th>File</th>
             </tr>
-            {% for file in files %}
-            <tr>
-                <td>{{ file }}</td>
-            </tr>
-            {% endfor %}
             </thead>
             <tbody>
+            {% for file in files %}
+                <tr>
+                    <td>{{ file }}</td>
+                </tr>
+            {% endfor %}
             </tbody>
         </table>
-        <div>
-
-        </div>
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
