--- a/src/templates/upload.html.twig
+++ b/src/templates/upload.html.twig
@@ -4,7 +4,7 @@
             <form action="/upload" method="post" enctype="multipart/form-data">
                 <div class="modal-header">
                     <h4 class="modal-title">Upload</h4>
-                    <button type="button" name="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
