--- a/src/templates/error.html.twig
+++ b/src/templates/error.html.twig
@@ -7,7 +7,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <div class="modal-body">
-                    <p>{{ result }}</p>
+                    <h5>{{ result }}</h5>
                 </div>
                 <div class="modal-footer">
                     <div class="col-sm-1">
