--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -4,13 +4,15 @@ body {
     font-family: 'Varela Round', sans-serif;
     font-size: 13px;
 }
+
 .table-wrapper {
     background: #fff;
     padding: 20px 25px;
     margin: 30px 0;
     border-radius: 3px;
-    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 }
+
 .table-title {
     background: #435d7d;
     color: #fff;
@@ -18,13 +20,16 @@ body {
     margin: -20px -25px 10px;
     border-radius: 3px 3px 0 0;
 }
+
 .table-title h2 {
     margin: 5px 0 0;
     font-size: 24px;
 }
+
 .table-title .btn-group {
     float: right;
 }
+
 .table-title .btn {
     color: #fff;
     float: right;
@@ -34,42 +39,52 @@ body {
     border-radius: 2px;
     margin-left: 10px;
 }
+
 .table-title .btn i {
     float: left;
     font-size: 21px;
     margin-right: 5px;
 }
+
 .table-title .btn span {
     float: left;
     margin-top: 2px;
 }
+
 table.table tr th, table.table tr td {
     border-color: #e9e9e9;
     padding: 12px 15px;
     vertical-align: middle;
 }
+
 table.table tr th:first-child {
     width: 25%;
 }
+
 table.table tr th:last-child {
     width: 10%;
 }
+
 table.table-striped tbody tr:nth-of-type(odd) {
     background-color: #fcfcfc;
 }
+
 table.table-striped.table-hover tbody tr:hover {
     background: #f5f5f5;
 }
+
 table.table th i {
     font-size: 13px;
     margin: 0 5px;
     cursor: pointer;
 }
+
 table.table td:last-child i {
     opacity: 0.9;
     font-size: 22px;
     margin: 0 5px;
 }
+
 table.table td a {
     font-weight: bold;
     color: #566787;
@@ -77,52 +92,67 @@ table.table td a {
     text-decoration: none;
     outline: none !important;
 }
+
 table.table td a:hover {
     color: #2196F3;
 }
+
 table.table td a.edit {
     color: #FFC107;
 }
+
 table.table td a.delete {
     color: #F44336;
 }
+
 table.table td i {
     font-size: 19px;
 }
+
 table.table .avatar {
     border-radius: 50%;
     vertical-align: middle;
     margin-right: 10px;
 }
+
 /* Modal styles */
 .modal .modal-dialog {
     max-width: 400px;
 }
+
 .modal .modal-header, .modal .modal-body, .modal .modal-footer {
     padding: 20px 30px;
 }
+
 .modal .modal-content {
     border-radius: 3px;
 }
+
 .modal .modal-footer {
     background: #ecf0f1;
     border-radius: 0 0 3px 3px;
 }
+
 .modal .modal-title {
     display: inline-block;
 }
+
 .modal .form-control {
+    margin: 5px 0px;
     border-radius: 2px;
     box-shadow: none;
     border-color: #dddddd;
 }
+
 .modal textarea.form-control {
     resize: vertical;
 }
+
 .modal .btn {
     border-radius: 2px;
     min-width: 100px;
 }
-.modal form label {
-    font-weight: normal;
+
+.view {
+    width: inherit;
 }
