--- a/src/templates/upload.html.twig
+++ b/src/templates/upload.html.twig
@@ -1,7 +1,7 @@
 <div id="upload" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form action="/upload" method="post" enctype="multipart/form-data">
+            <form action="/" method="post" enctype="multipart/form-data">
                 <div class="modal-header">
                     <h4 class="modal-title">Upload</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -9,7 +9,7 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label>File Name</label>
-                        <input name="file" type="file" class="form-control" accept="text/*,image/*" required>
+                        <input name="file" type="file" class="form-control" required>
                     </div>
                 </div>
                 <div class="modal-footer">
