--- a/src/views/view.html.twig
+++ b/src/views/view.html.twig
@@ -24,8 +24,8 @@
                                 {% endfor %}
                             </ul>
                             <label>Image</label>
-                            <a href="../uploads/{{ file.fullName }}" target="_blank">
-                                <img src="../uploads/{{ file.fullName }}">
+                            <a href="uploads/{{ file.fullName }}" target="_blank">
+                                <img src="uploads/{{ file.fullName }}">
                             </a>
                         {% endif %}
                     </div>
