--- a/src/views/error.html.twig
+++ b/src/views/error.html.twig
@@ -1,10 +1,10 @@
-<div id="error" style="{{ styleResult }}" class="modal {{ showResult }}">
+<div id="error" class="modal error {{ showResult }}">
     <div class="modal-dialog">
         <div class="modal-content">
             <form>
                 <div class="modal-header">
                     <h4 class="modal-title">Notification</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <a href="/" class="close" data-dismiss="modal">&times;</a>
                 </div>
                 <div class="modal-body">
                     <h5>{{ result }}</h5>
