--- a/task-15/src/views/upload.html.twig
+++ b/task-15/src/views/upload.html.twig
@@ -8,8 +8,8 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label>File Name</label>
-                        <input name="file" type="file" class="form-control" required>
+                        <label for="file_name">File Name</label>
+                        <input name="file" id="file_name" type="file" class="form-control" required>
                     </div>
                 </div>
                 <div class="modal-footer">
