--- a/task-16/src/views/index.html.twig
+++ b/task-16/src/views/index.html.twig
@@ -15,25 +15,24 @@
 </head>
 <body>
 <div class="login-form">
-    <form action="/sign_in" method="post">
+    <form action="/login" method="post">
         <div class="avatar">
             <img src="/assets/img/avatar.png" alt="Avatar">
         </div>
-        <h2 class="text-center">User Sign In</h2>
+        <h2 class="text-center">Login</h2>
         <div class="form-group">
-            <input type="email" class="form-control" name="username" placeholder="Email" required>
+            <input id="email" type="email" class="form-control" name="email" placeholder="Email" required>
         </div>
         <div class="form-group">
-            <input type="text" class="form-control" name="username" placeholder="Username" required>
+            <input id="name" type="text" class="form-control" name="name" placeholder="Username" required>
         </div>
         <div class="form-group">
-            <input type="password" class="form-control" name="password" placeholder="Password" required>
+            <input id="password" type="password" class="form-control" name="password" placeholder="Password" required>
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
         </div>
     </form>
-    <p class="text-center">Don't have an account? <a href="/up">Sign up here!</a></p>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
