--- a/task-16/src/views/index.html.twig
+++ b/task-16/src/views/index.html.twig
@@ -31,7 +31,7 @@
             <input id="password" type="password" class="form-control" name="password" placeholder="Password" required>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
+            <button type="submit" name="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
         </div>
     </form>
 </div>
