--- a/task-17/src/views/index.html.twig
+++ b/task-17/src/views/index.html.twig
@@ -57,9 +57,9 @@
             <label for="confirm_password">Confirm Password</label>
             <input id="confirm_password" type="password" class="form-control" name="confirm_password" required>
         </div>
-        <input id="check_value" style="display: none" name="check_value" value="{{ check_value }}"/>
+        <input id="check_value" style="display: none" name="check_value" value="{{ check_value }}">
         <div class="form-group">
-            <button id="submit" type="submit" name="submit" class="btn btn-primary btn-lg btn-block">Sign up</button>
+            <button id="submit" type="submit" class="btn btn-primary btn-lg btn-block">Sign up</button>
         </div>
     </form>
 </div>
