--- a/task-16/views/greeting.html.twig
+++ b/task-16/views/greeting.html.twig
@@ -22,6 +22,7 @@
             </div>
             <a href="/" class="close" data-dismiss="modal" aria-hidden="true">&times;</a>
         </div>
+        <input type="hidden" value="{{ check_value }}" name="check_value">
         <div class="modal-body text-center">
             <p>{{ notification }}</p>
         </div>
