--- a/task-16/views/index.html.twig
+++ b/task-16/views/index.html.twig
@@ -25,11 +25,9 @@
             <input id="email" type="email" class="form-control" name="email" placeholder="Email" required>
         </div>
         <div class="form-group">
-            <input id="name" type="text" class="form-control" name="name" placeholder="Username" required>
-        </div>
-        <div class="form-group">
             <input id="password" type="password" class="form-control" name="password" placeholder="Password" required>
         </div>
+        <input type="hidden" value="{{ check_value }}" name="check_value">
         <div class="form-group">
             <button type="submit" name="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
         </div>
