--- a/task-17/views/index.html.twig
+++ b/task-17/views/index.html.twig
@@ -28,7 +28,7 @@
             <input id="email" type="email" class="form-control" name="email" value="{{ email }}" required>
         </div>
         <div class="form-group">
-            <label for="email">Confirm Email</label>
+            <label for="confirm_email">Confirm Email</label>
             <input id="confirm_email" type="email" class="form-control" name="confirm_email" required>
         </div>
         <div class="form-row">
