--- a/task-18/views/user/authentication.html.twig
+++ b/task-18/views/user/authentication.html.twig
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/userForm/styles.css">
     <link rel="icon" href="data:,">
 </head>
 <body>
@@ -31,11 +31,12 @@
         <div class="form-group">
             <button type="submit" name="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
         </div>
+        <div>
+            <p class="text-muted text-center mt-3 mb-0">
+                Don't have an account? <a href="/registration-form" class="text-primary ml-1">Sign Up</a>
+            </p>
+        </div>
     </form>
-    <div>
-        <p class="mb-0">Don't have an account? <a href="/registration" class="text-white-50 fw-bold">Sign Up</a>
-        </p>
-    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
