--- a/task-18/assets/css/fileForm/styles.css
+++ b/task-18/assets/css/fileForm/styles.css
@@ -1,8 +1,6 @@
 body {
-    color: #566787;
-    background: #f5f5f5;
-    font-family: 'Varela Round', sans-serif;
-    font-size: 13px;
+    background: #475d62 url("/assets/img/background.jpg") fixed;
+    background-size: cover;
 }
 
 .table-wrapper {
