--- a/task-18/views/file/upload.html.twig
+++ b/task-18/views/file/upload.html.twig
@@ -1,17 +1,17 @@
 <div id="upload" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form action="/" method="post" enctype="multipart/form-data">
+            <form action="/file-form" method="post" enctype="multipart/form-data">
                 <div class="modal-header">
-                    <h4 class="modal-title">Upload</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label for="file_name">File Name</label>
+                        <label for="file_name" File Name</label>
                         <input name="file" id="file_name" type="file" class="form-control" required>
                     </div>
                 </div>
+                <input type="hidden" value="{{ check_value }}" name="check_value">
                 <div class="modal-footer">
                     <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
                     <input type="submit" class="btn btn-info" value="Upload">
