--- a/task-18/views/file/view.html.twig
+++ b/task-18/views/file/view.html.twig
@@ -1,9 +1,8 @@
 <div id="view{{ file.id }}" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content view">
-            <form action="/" method="post" enctype="multipart/form-data">
+            <form action="/file-form" method="post" enctype="multipart/form-data">
                 <div class="modal-header">
-                    <h4 class="modal-title">Information</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <div class="modal-body">
@@ -18,11 +17,9 @@
                         <input id="file_size" class="form-control" value="{{ file.size }}" disabled>
                         {% if file.meta|length > 0 %}
                             <label for="file_meta">Meta Info</label>
-                            <ul id="file_meta">
-                                {% for header, info in file.meta %}
-                                    <li>{{ header }}: {{ info }}</li>
-                                {% endfor %}
-                            </ul>
+                            {% for header, info in file.meta %}
+                                <input id="file-meta" class="form-control" value="{{ header }}: {{ info }}" disabled>
+                            {% endfor %}
                             <label for="image">Image</label>
                             <a href="uploads/{{ file.fullName }}" target="_blank">
                                 <img id="image" alt="User's image" src="uploads/{{ file.fullName }}">
