--- a/task-18/views/user/authentication.html.twig
+++ b/task-18/views/user/authentication.html.twig
@@ -22,12 +22,18 @@
         </div>
         <h2 class="text-center">Login</h2>
         <div class="form-group">
-            <input id="email" type="email" class="form-control" name="email" placeholder="Email" required>
+            <label for="email">Email</label>
+            <input id="email" type="email" class="form-control" name="email" required>
         </div>
         <div class="form-group">
-            <input id="password" type="password" class="form-control" name="password" placeholder="Password" required>
+            <label for="password">Password</label>
+            <input id="password" type="password" class="form-control" name="password" required>
         </div>
         <input type="hidden" value="{{ check_value }}" name="check_value">
+        <label for="remember" class="control control--checkbox mb-3"><span class="caption">Remember me</span>
+            <input id="remember" type="checkbox" class="remember" name="remember">
+            <div class="control__indicator"></div>
+        </label>
         <div class="form-group">
             <button type="submit" name="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
         </div>
