--- a/task-18/views/file/upload.html.twig
+++ b/task-18/views/file/upload.html.twig
@@ -2,12 +2,10 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form action="/file-form" method="post" enctype="multipart/form-data">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <label for="file_name" File Name</label>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <div class="form-group col-6">
+                        <label for="file_name"> File Name </label>
                         <input name="file" id="file_name" type="file" class="form-control" required>
                     </div>
                 </div>
