--- a/task-21/assets/css/tailwind.index.css
+++ b/task-21/assets/css/tailwind.index.css
@@ -3,18 +3,35 @@
 @tailwind utilities;
 
 body {
-    background: #edf2f7;
+    background: #dce0e5;
+}
+
+@layer components {
+    .text-item {
+        @apply text-gray-900 whitespace-nowrap text-center;
+    }
+}
+
+table {
+    @apply min-w-full leading-normal;
+}
+
+.table-area {
+    @apply inline-block min-w-full shadow rounded-lg overflow-hidden;
+}
+
+.table-item {
+    @apply px-5 border border-gray-200;
 }
 
 .table-title {
-    @apply px-5 py-3 border-r-2 border-gray-200 bg-gray-100
-    text-center text-xs font-semibold text-gray-600 uppercase tracking-wider;
+    @apply py-3 bg-gray-200 text-center text-xs font-semibold text-gray-600 uppercase tracking-wider;
 }
 
 .table-cars-content {
-    @apply px-5 py-5 border border-gray-200 bg-white text-sm w-2/5;
+    @apply py-5 bg-white text-sm w-2/5;
 }
 
 .table-statistics-content {
-    @apply px-5 py-4 border border-gray-200 bg-white text-2xl w-2/5;
+    @apply py-4 bg-white text-2xl w-2/5;
 }
