--- a/task-21/views/index.html.twig
+++ b/task-21/views/index.html.twig
@@ -9,15 +9,15 @@
 </head>
 <body class="items-center justify-center ml-8 mr-8 mt-2">
 <div class="">
-    <h1 class="text-3xl text-center font-semibold text-center pb-3">Cars Showroom</h1>
+    <h1 class="text-3xl text-center tracking-widest font-semibold text-center">Cars Showroom</h1>
 </div>
 <div class="grid grid-cols-2 gap-4">
     <div class="">
         {% include('soldCarsTable.html.twig') %}
         {% include('unsoldCarsTable.html.twig') %}
     </div>
-    <div class="grid grid-rows-2 gap-16">
-        <div class="grid grid-cols-2 gap-4 pt-16">
+    <div class="grid grid-rows-2">
+        <div class="grid grid-cols-2 gap-4 pt-24">
             {% include('statisticsTable.html.twig')
                 with {'title': 'The Average Price on Cars Sold for All Time', 'content': averageForAllTime} %}
             {% include('statisticsTable.html.twig')
