--- a/task-21/views/statisticsTable.html.twig
+++ b/task-21/views/statisticsTable.html.twig
@@ -1,30 +1,24 @@
 <div class="-mx-4 sm:-mx-8 px-4 sm:px-8 overflow-x-auto">
-    <div class="inline-block min-w-full shadow rounded-lg overflow-hidden">
-        <table class="min-w-full leading-normal">
+    <div class="table-area">
+        <table>
             <thead>
             <tr>
-                <th class="table-title">
-                    {{ title }}
-                </th>
+                <th class="table-item table-title">{{ title }}</th>
             </tr>
             </thead>
             <tbody>
             {% if content is iterable %}
                 {% for car in content %}
                     <tr>
-                        <td class="table-statistics-content">
-                            <p class="text-center text-gray-900 whitespace-no-wrap">
-                                {{ car.model }}
-                            </p>
+                        <td class="table-item table-statistics-content">
+                            <p class="text-item">{{ car.model }}</p>
                         </td>
                     </tr>
                 {% endfor %}
             {% else %}
                 <tr>
-                    <td class="table-statistics-content">
-                        <p class="text-center text-gray-900 whitespace-no-wrap">
-                            {{ content }}
-                        </p>
+                    <td class="table-item table-statistics-content">
+                        <p class="text-item">{{ content }}</p>
                     </td>
                 </tr>
             {% endif %}
