--- a/task-21/views/statisticsTable.html.twig
+++ b/task-21/views/statisticsTable.html.twig
@@ -1,4 +1,4 @@
-<div class="-mx-4 sm:-mx-8 px-4 sm:px-8 overflow-x-auto">
+<div class="overflow-x-auto">
     <div class="table-area">
         <table>
             <thead>
